// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Match snapshot: Dialog 1`] = `
<Memo()
  createdAt="createdAt"
  id="id"
  interlocutor={
    Object {
      "avatar": null,
      "confirmed": false,
      "createdAt": 2000-12-31T21:00:00.000Z,
      "email": "foo@bar.baz",
      "full_name": "name",
      "id": "123",
      "last_seen": 2000-12-31T21:00:00.000Z,
      "updatedAt": 2000-12-31T21:00:00.000Z,
    }
  }
  isOwnMessage={false}
  isTyping={false}
  lastMessage={
    Object {
      "attachments": Array [],
      "author": Object {
        "avatar": "",
        "confirmed": false,
        "createdAt": 2000-12-31T21:00:00.000Z,
        "email": "foo@bar.baz",
        "full_name": "name",
        "id": "123",
        "last_seen": 2000-12-31T21:00:00.000Z,
        "updatedAt": 2000-12-31T21:00:00.000Z,
      },
      "createdAt": "createdAt",
      "dialog": "dialog_id",
      "id": "id",
      "read": false,
      "text": "text",
      "updatedAt": "updatedAt",
    }
  }
  messages={0}
  selected={false}
  status="ACTIVE"
  updatedAt="updatedAt"
>
  <div
    className="dialog"
  >
    <Avatar
      customStyles="dialog__avatar"
      name="name"
      src=""
    >
      <div
        className="avatar dialog__avatar"
        style={
          Object {
            "backgroundColor": "#7fffff",
          }
        }
      >
        <span
          className="avatar__text avatar__text--dark"
        >
          n
        </span>
      </div>
    </Avatar>
    <div
      className="dialog__data"
    >
      <div
        className="dialog__text"
      >
        <Component
          customStyles="dialog__text-title"
          numberOfLines={1}
          type="h4"
        >
          <Dotdotdot
            clamp={1}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__text-title"
                type="h4"
              >
                <h4
                  className="text text--heading-4 dialog__text-title"
                >
                  name
                </h4>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
        <Component
          customStyles="dialog__text-description"
        >
          <Dotdotdot
            clamp={Infinity}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__text-description"
              >
                <p
                  className="text text--description dialog__text-description"
                >
                  text
                </p>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
      </div>
      <div
        className="dialog__info"
      >
        <Component
          customStyles="dialog__info-date"
          size="XS"
          type="mixed"
        >
          <Dotdotdot
            clamp={Infinity}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__info-date"
                size="XS"
                type="mixed"
              >
                <p
                  className="text text--xs dialog__info-date"
                >
                  Invalid Date
                </p>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
      </div>
    </div>
  </div>
</Memo()>
`;

exports[`Dialog Should render Check icon: Dialog with sent message 1`] = `
<Memo()
  createdAt="createdAt"
  id="id"
  interlocutor={
    Object {
      "avatar": null,
      "confirmed": false,
      "createdAt": 2000-12-31T21:00:00.000Z,
      "email": "foo@bar.baz",
      "full_name": "name",
      "id": "123",
      "last_seen": 2000-12-31T21:00:00.000Z,
      "updatedAt": 2000-12-31T21:00:00.000Z,
    }
  }
  isOwnMessage={true}
  isTyping={false}
  lastMessage={
    Object {
      "attachments": Array [],
      "author": Object {
        "avatar": "",
        "confirmed": false,
        "createdAt": 2000-12-31T21:00:00.000Z,
        "email": "foo@bar.baz",
        "full_name": "name",
        "id": "123",
        "last_seen": 2000-12-31T21:00:00.000Z,
        "updatedAt": 2000-12-31T21:00:00.000Z,
      },
      "createdAt": "createdAt",
      "dialog": "dialog_id",
      "id": "id",
      "read": false,
      "text": "text",
      "updatedAt": "updatedAt",
    }
  }
  messages={0}
  selected={false}
  status="ACTIVE"
  updatedAt="updatedAt"
>
  <div
    className="dialog"
  >
    <Avatar
      customStyles="dialog__avatar"
      name="name"
      src=""
    >
      <div
        className="avatar dialog__avatar"
        style={
          Object {
            "backgroundColor": "#7fffff",
          }
        }
      >
        <span
          className="avatar__text avatar__text--dark"
        >
          n
        </span>
      </div>
    </Avatar>
    <div
      className="dialog__data"
    >
      <div
        className="dialog__text"
      >
        <Component
          customStyles="dialog__text-title"
          numberOfLines={1}
          type="h4"
        >
          <Dotdotdot
            clamp={1}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__text-title"
                type="h4"
              >
                <h4
                  className="text text--heading-4 dialog__text-title"
                >
                  name
                </h4>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
        <Component
          customStyles="dialog__text-description"
        >
          <Dotdotdot
            clamp={Infinity}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__text-description"
              >
                <p
                  className="text text--description dialog__text-description"
                >
                  You: text
                </p>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
      </div>
      <div
        className="dialog__info"
      >
        <Component
          customStyles="dialog__info-date"
          size="XS"
          type="mixed"
        >
          <Dotdotdot
            clamp={Infinity}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__info-date"
                size="XS"
                type="mixed"
              >
                <p
                  className="text text--xs dialog__info-date"
                >
                  Invalid Date
                </p>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
        <div
          color="#999999"
          height={15}
          width={15}
        />
      </div>
    </div>
  </div>
</Memo()>
`;

exports[`Dialog Should render Counter: Dialog with counter 1`] = `
<Memo()
  createdAt="createdAt"
  id="id"
  interlocutor={
    Object {
      "avatar": null,
      "confirmed": false,
      "createdAt": 2000-12-31T21:00:00.000Z,
      "email": "foo@bar.baz",
      "full_name": "name",
      "id": "123",
      "last_seen": 2000-12-31T21:00:00.000Z,
      "updatedAt": 2000-12-31T21:00:00.000Z,
    }
  }
  isOwnMessage={false}
  isTyping={false}
  lastMessage={
    Object {
      "attachments": Array [],
      "author": Object {
        "avatar": "",
        "confirmed": false,
        "createdAt": 2000-12-31T21:00:00.000Z,
        "email": "foo@bar.baz",
        "full_name": "name",
        "id": "123",
        "last_seen": 2000-12-31T21:00:00.000Z,
        "updatedAt": 2000-12-31T21:00:00.000Z,
      },
      "createdAt": "createdAt",
      "dialog": "dialog_id",
      "id": "id",
      "read": false,
      "text": "text",
      "updatedAt": "updatedAt",
    }
  }
  messages={123}
  selected={false}
  status="ACTIVE"
  updatedAt="updatedAt"
>
  <div
    className="dialog"
  >
    <Avatar
      customStyles="dialog__avatar"
      name="name"
      src=""
    >
      <div
        className="avatar dialog__avatar"
        style={
          Object {
            "backgroundColor": "#7fffff",
          }
        }
      >
        <span
          className="avatar__text avatar__text--dark"
        >
          n
        </span>
      </div>
    </Avatar>
    <div
      className="dialog__data"
    >
      <div
        className="dialog__text"
      >
        <Component
          customStyles="dialog__text-title"
          numberOfLines={1}
          type="h4"
        >
          <Dotdotdot
            clamp={1}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__text-title"
                type="h4"
              >
                <h4
                  className="text text--heading-4 dialog__text-title"
                >
                  name
                </h4>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
        <Component
          customStyles="dialog__text-description"
        >
          <Dotdotdot
            clamp={Infinity}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__text-description"
              >
                <p
                  className="text text--description dialog__text-description"
                >
                  text
                </p>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
      </div>
      <div
        className="dialog__info"
      >
        <Component
          customStyles="dialog__info-date"
          size="XS"
          type="mixed"
        >
          <Dotdotdot
            clamp={Infinity}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__info-date"
                size="XS"
                type="mixed"
              >
                <p
                  className="text text--xs dialog__info-date"
                >
                  Invalid Date
                </p>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
        <Counter
          count="99+"
          status="ACTIVE"
        >
          <div
            className="counter"
          >
            <span
              className="counter__text"
            >
              99+
            </span>
          </div>
        </Counter>
      </div>
    </div>
  </div>
</Memo()>
`;

exports[`Dialog Should render Dialog component with selected modifier: Dialog with selected modifier 1`] = `
<Memo()
  createdAt="createdAt"
  id="id"
  interlocutor={
    Object {
      "avatar": null,
      "confirmed": false,
      "createdAt": 2000-12-31T21:00:00.000Z,
      "email": "foo@bar.baz",
      "full_name": "name",
      "id": "123",
      "last_seen": 2000-12-31T21:00:00.000Z,
      "updatedAt": 2000-12-31T21:00:00.000Z,
    }
  }
  isOwnMessage={false}
  isTyping={false}
  lastMessage={
    Object {
      "attachments": Array [],
      "author": Object {
        "avatar": "",
        "confirmed": false,
        "createdAt": 2000-12-31T21:00:00.000Z,
        "email": "foo@bar.baz",
        "full_name": "name",
        "id": "123",
        "last_seen": 2000-12-31T21:00:00.000Z,
        "updatedAt": 2000-12-31T21:00:00.000Z,
      },
      "createdAt": "createdAt",
      "dialog": "dialog_id",
      "id": "id",
      "read": false,
      "text": "text",
      "updatedAt": "updatedAt",
    }
  }
  messages={0}
  selected={true}
  status="ACTIVE"
  updatedAt="updatedAt"
>
  <div
    className="dialog dialog--selected"
  >
    <Avatar
      customStyles="dialog__avatar"
      name="name"
      src=""
    >
      <div
        className="avatar dialog__avatar"
        style={
          Object {
            "backgroundColor": "#7fffff",
          }
        }
      >
        <span
          className="avatar__text avatar__text--dark"
        >
          n
        </span>
      </div>
    </Avatar>
    <div
      className="dialog__data"
    >
      <div
        className="dialog__text"
      >
        <Component
          customStyles="dialog__text-title"
          numberOfLines={1}
          type="h4"
        >
          <Dotdotdot
            clamp={1}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__text-title"
                type="h4"
              >
                <h4
                  className="text text--heading-4 dialog__text-title"
                >
                  name
                </h4>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
        <Component
          customStyles="dialog__text-description"
        >
          <Dotdotdot
            clamp={Infinity}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__text-description"
              >
                <p
                  className="text text--description dialog__text-description"
                >
                  text
                </p>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
      </div>
      <div
        className="dialog__info"
      >
        <Component
          customStyles="dialog__info-date"
          size="XS"
          type="mixed"
        >
          <Dotdotdot
            clamp={Infinity}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__info-date"
                size="XS"
                type="mixed"
              >
                <p
                  className="text text--xs dialog__info-date"
                >
                  Invalid Date
                </p>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
      </div>
    </div>
  </div>
</Memo()>
`;

exports[`Dialog Should render DoubleCheck icon: Dialog with read message 1`] = `
<Memo()
  createdAt="createdAt"
  id="id"
  interlocutor={
    Object {
      "avatar": null,
      "confirmed": false,
      "createdAt": 2000-12-31T21:00:00.000Z,
      "email": "foo@bar.baz",
      "full_name": "name",
      "id": "123",
      "last_seen": 2000-12-31T21:00:00.000Z,
      "updatedAt": 2000-12-31T21:00:00.000Z,
    }
  }
  isOwnMessage={false}
  isTyping={false}
  lastMessage={
    Object {
      "attachments": Array [],
      "author": Object {
        "avatar": "",
        "confirmed": false,
        "createdAt": 2000-12-31T21:00:00.000Z,
        "email": "foo@bar.baz",
        "full_name": "name",
        "id": "123",
        "last_seen": 2000-12-31T21:00:00.000Z,
        "updatedAt": 2000-12-31T21:00:00.000Z,
      },
      "createdAt": "createdAt",
      "dialog": "dialog_id",
      "id": "id",
      "read": true,
      "text": "text",
      "updatedAt": "updatedAt",
    }
  }
  messages={0}
  selected={false}
  status="ACTIVE"
  updatedAt="updatedAt"
>
  <div
    className="dialog"
  >
    <Avatar
      customStyles="dialog__avatar"
      name="name"
      src=""
    >
      <div
        className="avatar dialog__avatar"
        style={
          Object {
            "backgroundColor": "#7fffff",
          }
        }
      >
        <span
          className="avatar__text avatar__text--dark"
        >
          n
        </span>
      </div>
    </Avatar>
    <div
      className="dialog__data"
    >
      <div
        className="dialog__text"
      >
        <Component
          customStyles="dialog__text-title"
          numberOfLines={1}
          type="h4"
        >
          <Dotdotdot
            clamp={1}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__text-title"
                type="h4"
              >
                <h4
                  className="text text--heading-4 dialog__text-title"
                >
                  name
                </h4>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
        <Component
          customStyles="dialog__text-description"
        >
          <Dotdotdot
            clamp={Infinity}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__text-description"
              >
                <p
                  className="text text--description dialog__text-description"
                >
                  text
                </p>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
      </div>
      <div
        className="dialog__info"
      >
        <Component
          customStyles="dialog__info-date"
          size="XS"
          type="mixed"
        >
          <Dotdotdot
            clamp={Infinity}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__info-date"
                size="XS"
                type="mixed"
              >
                <p
                  className="text text--xs dialog__info-date"
                >
                  Invalid Date
                </p>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
        <div
          color="#999999"
          height={15}
          width={15}
        />
      </div>
    </div>
  </div>
</Memo()>
`;

exports[`Dialog Should render component with avatar: Dialog with avatar 1`] = `
<Memo()
  createdAt="createdAt"
  id="id"
  interlocutor={
    Object {
      "avatar": "avatar/src",
      "confirmed": false,
      "createdAt": 2000-12-31T21:00:00.000Z,
      "email": "foo@bar.baz",
      "full_name": "name",
      "id": "123",
      "last_seen": 2000-12-31T21:00:00.000Z,
      "updatedAt": 2000-12-31T21:00:00.000Z,
    }
  }
  isOwnMessage={false}
  isTyping={false}
  lastMessage={
    Object {
      "attachments": Array [],
      "author": Object {
        "avatar": "",
        "confirmed": false,
        "createdAt": 2000-12-31T21:00:00.000Z,
        "email": "foo@bar.baz",
        "full_name": "name",
        "id": "123",
        "last_seen": 2000-12-31T21:00:00.000Z,
        "updatedAt": 2000-12-31T21:00:00.000Z,
      },
      "createdAt": "createdAt",
      "dialog": "dialog_id",
      "id": "id",
      "read": false,
      "text": "text",
      "updatedAt": "updatedAt",
    }
  }
  messages={0}
  selected={false}
  status="ACTIVE"
  updatedAt="updatedAt"
>
  <div
    className="dialog"
  >
    <Avatar
      customStyles="dialog__avatar"
      name="name"
      src="avatar/src"
    >
      <div
        className="avatar dialog__avatar"
      >
        <img
          alt=""
          className="avatar__image"
          src="avatar/src"
        />
        <Loader>
          <div
            className="loader"
          >
            <div
              className="loader__line"
              key="0"
            />
            <div
              className="loader__line"
              key="1"
            />
            <div
              className="loader__line"
              key="2"
            />
            <div
              className="loader__line"
              key="3"
            />
            <div
              className="loader__line"
              key="4"
            />
            <div
              className="loader__line"
              key="5"
            />
            <div
              className="loader__line"
              key="6"
            />
            <div
              className="loader__line"
              key="7"
            />
            <div
              className="loader__line"
              key="8"
            />
            <div
              className="loader__line"
              key="9"
            />
            <div
              className="loader__line"
              key="10"
            />
            <div
              className="loader__line"
              key="11"
            />
          </div>
        </Loader>
      </div>
    </Avatar>
    <div
      className="dialog__data"
    >
      <div
        className="dialog__text"
      >
        <Component
          customStyles="dialog__text-title"
          numberOfLines={1}
          type="h4"
        >
          <Dotdotdot
            clamp={1}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__text-title"
                type="h4"
              >
                <h4
                  className="text text--heading-4 dialog__text-title"
                >
                  name
                </h4>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
        <Component
          customStyles="dialog__text-description"
        >
          <Dotdotdot
            clamp={Infinity}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__text-description"
              >
                <p
                  className="text text--description dialog__text-description"
                >
                  text
                </p>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
      </div>
      <div
        className="dialog__info"
      >
        <Component
          customStyles="dialog__info-date"
          size="XS"
          type="mixed"
        >
          <Dotdotdot
            clamp={Infinity}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__info-date"
                size="XS"
                type="mixed"
              >
                <p
                  className="text text--xs dialog__info-date"
                >
                  Invalid Date
                </p>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
      </div>
    </div>
  </div>
</Memo()>
`;

exports[`Dialog Should render component with created date: Dialog with created date 1`] = `
<Memo()
  createdAt="Mon May 12 2021 16:39:32 GMT+0300 (Москва, стандартное время)"
  id="id"
  interlocutor={
    Object {
      "avatar": "avatar/src",
      "confirmed": false,
      "createdAt": 2000-12-31T21:00:00.000Z,
      "email": "foo@bar.baz",
      "full_name": "name",
      "id": "123",
      "last_seen": 2000-12-31T21:00:00.000Z,
      "updatedAt": 2000-12-31T21:00:00.000Z,
    }
  }
  isOwnMessage={false}
  isTyping={false}
  lastMessage={
    Object {
      "attachments": Array [],
      "author": Object {
        "avatar": "",
        "confirmed": false,
        "createdAt": 2000-12-31T21:00:00.000Z,
        "email": "foo@bar.baz",
        "full_name": "name",
        "id": "123",
        "last_seen": 2000-12-31T21:00:00.000Z,
        "updatedAt": 2000-12-31T21:00:00.000Z,
      },
      "createdAt": "createdAt",
      "dialog": "dialog_id",
      "id": "id",
      "read": false,
      "text": "text",
      "updatedAt": "updatedAt",
    }
  }
  messages={0}
  selected={false}
  status="ACTIVE"
  updatedAt=""
>
  <div
    className="dialog"
  >
    <Avatar
      customStyles="dialog__avatar"
      name="name"
      src="avatar/src"
    >
      <div
        className="avatar dialog__avatar"
      >
        <img
          alt=""
          className="avatar__image"
          src="avatar/src"
        />
        <Loader>
          <div
            className="loader"
          >
            <div
              className="loader__line"
              key="0"
            />
            <div
              className="loader__line"
              key="1"
            />
            <div
              className="loader__line"
              key="2"
            />
            <div
              className="loader__line"
              key="3"
            />
            <div
              className="loader__line"
              key="4"
            />
            <div
              className="loader__line"
              key="5"
            />
            <div
              className="loader__line"
              key="6"
            />
            <div
              className="loader__line"
              key="7"
            />
            <div
              className="loader__line"
              key="8"
            />
            <div
              className="loader__line"
              key="9"
            />
            <div
              className="loader__line"
              key="10"
            />
            <div
              className="loader__line"
              key="11"
            />
          </div>
        </Loader>
      </div>
    </Avatar>
    <div
      className="dialog__data"
    >
      <div
        className="dialog__text"
      >
        <Component
          customStyles="dialog__text-title"
          numberOfLines={1}
          type="h4"
        >
          <Dotdotdot
            clamp={1}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__text-title"
                type="h4"
              >
                <h4
                  className="text text--heading-4 dialog__text-title"
                >
                  name
                </h4>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
        <Component
          customStyles="dialog__text-description"
        >
          <Dotdotdot
            clamp={Infinity}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__text-description"
              >
                <p
                  className="text text--description dialog__text-description"
                >
                  text
                </p>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
      </div>
      <div
        className="dialog__info"
      >
        <Component
          customStyles="dialog__info-date"
          size="XS"
          type="mixed"
        >
          <Dotdotdot
            clamp={Infinity}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__info-date"
                size="XS"
                type="mixed"
              >
                <p
                  className="text text--xs dialog__info-date"
                >
                  5/12/2021
                </p>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
      </div>
    </div>
  </div>
</Memo()>
`;

exports[`Dialog Should render component with typing: Dialog with typing 1`] = `
<Memo()
  createdAt="createdAt"
  id="id"
  interlocutor={
    Object {
      "avatar": "avatar/src",
      "confirmed": false,
      "createdAt": 2000-12-31T21:00:00.000Z,
      "email": "foo@bar.baz",
      "full_name": "name",
      "id": "123",
      "last_seen": 2000-12-31T21:00:00.000Z,
      "updatedAt": 2000-12-31T21:00:00.000Z,
    }
  }
  isOwnMessage={false}
  isTyping={true}
  lastMessage={
    Object {
      "attachments": Array [],
      "author": Object {
        "avatar": "",
        "confirmed": false,
        "createdAt": 2000-12-31T21:00:00.000Z,
        "email": "foo@bar.baz",
        "full_name": "name",
        "id": "123",
        "last_seen": 2000-12-31T21:00:00.000Z,
        "updatedAt": 2000-12-31T21:00:00.000Z,
      },
      "createdAt": "createdAt",
      "dialog": "dialog_id",
      "id": "id",
      "read": false,
      "text": "text",
      "updatedAt": "updatedAt",
    }
  }
  messages={0}
  selected={false}
  status="ACTIVE"
  updatedAt="updatedAt"
>
  <div
    className="dialog"
  >
    <Avatar
      customStyles="dialog__avatar"
      name="name"
      src="avatar/src"
    >
      <div
        className="avatar dialog__avatar"
      >
        <img
          alt=""
          className="avatar__image"
          src="avatar/src"
        />
        <Loader>
          <div
            className="loader"
          >
            <div
              className="loader__line"
              key="0"
            />
            <div
              className="loader__line"
              key="1"
            />
            <div
              className="loader__line"
              key="2"
            />
            <div
              className="loader__line"
              key="3"
            />
            <div
              className="loader__line"
              key="4"
            />
            <div
              className="loader__line"
              key="5"
            />
            <div
              className="loader__line"
              key="6"
            />
            <div
              className="loader__line"
              key="7"
            />
            <div
              className="loader__line"
              key="8"
            />
            <div
              className="loader__line"
              key="9"
            />
            <div
              className="loader__line"
              key="10"
            />
            <div
              className="loader__line"
              key="11"
            />
          </div>
        </Loader>
      </div>
    </Avatar>
    <div
      className="dialog__data"
    >
      <div
        className="dialog__text"
      >
        <Component
          customStyles="dialog__text-title"
          numberOfLines={1}
          type="h4"
        >
          <Dotdotdot
            clamp={1}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__text-title"
                type="h4"
              >
                <h4
                  className="text text--heading-4 dialog__text-title"
                >
                  name
                </h4>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
        <Typing
          customStyles="dialog__typing"
          size="SMALL"
        >
          <div
            className="typing dialog__typing typing--small"
          >
            <p
              className="typing__text"
            >
              Typing
            </p>
            <div
              className="typing__loader"
            >
              <div
                className="typing__loader-ellipse"
              />
              <div
                className="typing__loader-ellipse"
              />
              <div
                className="typing__loader-ellipse"
              />
              <div
                className="typing__loader-ellipse"
              />
            </div>
          </div>
        </Typing>
      </div>
      <div
        className="dialog__info"
      >
        <Component
          customStyles="dialog__info-date"
          size="XS"
          type="mixed"
        >
          <Dotdotdot
            clamp={Infinity}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__info-date"
                size="XS"
                type="mixed"
              >
                <p
                  className="text text--xs dialog__info-date"
                >
                  Invalid Date
                </p>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
      </div>
    </div>
  </div>
</Memo()>
`;

exports[`Dialog Should render updated date: Dialog with date 1`] = `
<Memo()
  createdAt="createdAt"
  id="id"
  interlocutor={
    Object {
      "avatar": null,
      "confirmed": false,
      "createdAt": 2000-12-31T21:00:00.000Z,
      "email": "foo@bar.baz",
      "full_name": "name",
      "id": "123",
      "last_seen": 2000-12-31T21:00:00.000Z,
      "updatedAt": 2000-12-31T21:00:00.000Z,
    }
  }
  isOwnMessage={false}
  isTyping={false}
  lastMessage={
    Object {
      "attachments": Array [],
      "author": Object {
        "avatar": "",
        "confirmed": false,
        "createdAt": 2000-12-31T21:00:00.000Z,
        "email": "foo@bar.baz",
        "full_name": "name",
        "id": "123",
        "last_seen": 2000-12-31T21:00:00.000Z,
        "updatedAt": 2000-12-31T21:00:00.000Z,
      },
      "createdAt": "createdAt",
      "dialog": "dialog_id",
      "id": "id",
      "read": false,
      "text": "text",
      "updatedAt": "updatedAt",
    }
  }
  messages={0}
  selected={false}
  status="ACTIVE"
  updatedAt="Mon May 03 2021 16:49:32 GMT+0300 (Москва, стандартное время)"
>
  <div
    className="dialog"
  >
    <Avatar
      customStyles="dialog__avatar"
      name="name"
      src=""
    >
      <div
        className="avatar dialog__avatar"
        style={
          Object {
            "backgroundColor": "#7fffff",
          }
        }
      >
        <span
          className="avatar__text avatar__text--dark"
        >
          n
        </span>
      </div>
    </Avatar>
    <div
      className="dialog__data"
    >
      <div
        className="dialog__text"
      >
        <Component
          customStyles="dialog__text-title"
          numberOfLines={1}
          type="h4"
        >
          <Dotdotdot
            clamp={1}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__text-title"
                type="h4"
              >
                <h4
                  className="text text--heading-4 dialog__text-title"
                >
                  name
                </h4>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
        <Component
          customStyles="dialog__text-description"
        >
          <Dotdotdot
            clamp={Infinity}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__text-description"
              >
                <p
                  className="text text--description dialog__text-description"
                >
                  text
                </p>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
      </div>
      <div
        className="dialog__info"
      >
        <Component
          customStyles="dialog__info-date"
          size="XS"
          type="mixed"
        >
          <Dotdotdot
            clamp={Infinity}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__info-date"
                size="XS"
                type="mixed"
              >
                <p
                  className="text text--xs dialog__info-date"
                >
                  5/3/2021
                </p>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
      </div>
    </div>
  </div>
</Memo()>
`;

exports[`Dialog Shouldn\`t render status: Dialog without status 1`] = `
<Memo()
  createdAt="createdAt"
  id="id"
  interlocutor={
    Object {
      "avatar": null,
      "confirmed": false,
      "createdAt": 2000-12-31T21:00:00.000Z,
      "email": "foo@bar.baz",
      "full_name": "name",
      "id": "123",
      "last_seen": 2000-12-31T21:00:00.000Z,
      "updatedAt": 2000-12-31T21:00:00.000Z,
    }
  }
  isOwnMessage={false}
  isTyping={false}
  messages={0}
  selected={false}
  status="ACTIVE"
  updatedAt="updatedAt"
>
  <div
    className="dialog"
  >
    <Avatar
      customStyles="dialog__avatar"
      name="name"
      src=""
    >
      <div
        className="avatar dialog__avatar"
        style={
          Object {
            "backgroundColor": "#7fffff",
          }
        }
      >
        <span
          className="avatar__text avatar__text--dark"
        >
          n
        </span>
      </div>
    </Avatar>
    <div
      className="dialog__data"
    >
      <div
        className="dialog__text"
      >
        <Component
          customStyles="dialog__text-title"
          numberOfLines={1}
          type="h4"
        >
          <Dotdotdot
            clamp={1}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__text-title"
                type="h4"
              >
                <h4
                  className="text text--heading-4 dialog__text-title"
                >
                  name
                </h4>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
        <Component
          customStyles="dialog__text-description"
        >
          <Dotdotdot
            clamp={Infinity}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__text-description"
              >
                <p
                  className="text text--description dialog__text-description"
                />
              </Component>
            </div>
          </Dotdotdot>
        </Component>
      </div>
      <div
        className="dialog__info"
      >
        <Component
          customStyles="dialog__info-date"
          size="XS"
          type="mixed"
        >
          <Dotdotdot
            clamp={Infinity}
            tagName="div"
            truncationChar="…"
            useNativeClamp={false}
          >
            <div>
              <Component
                customStyles="dialog__info-date"
                size="XS"
                type="mixed"
              >
                <p
                  className="text text--xs dialog__info-date"
                >
                  Invalid Date
                </p>
              </Component>
            </div>
          </Dotdotdot>
        </Component>
      </div>
    </div>
  </div>
</Memo()>
`;
